added swagger docs to the rest of the endpoints
